src/test/resources/integration-test/envoy-xfcc.yaml
admin:
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 9901
static_resources:
  clusters:

  - name: keycloak
    type: STRICT_DNS
    connect_timeout: 5s
    load_assignment:
      cluster_name: keycloak
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: keycloak
                port_value: 8443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          tls_certificates:
            certificate_chain:
              filename: "/input/target/certs/envoy-client.pem"
            private_key:
              filename: "/input/target/certs/envoy-client-key.pem"
          validation_context:
            trusted_ca:
              filename: "/input/target/certs/server-ca.pem"

  listeners:
  - name: http
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8443
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
            - name: fileaccesslog
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: myroute
            virtual_hosts:

            - name: keycloak
              domains:
              - "keycloak.127.0.0.1.nip.io:8443"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: keycloak

          forward_client_cert_details: SANITIZE_SET
          set_current_client_cert_details:
            #subject: true
            cert: true
            chain: true
      transport_socket:
        name: "envoy.transport_sockets.tls"
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
              certificate_chain:
                filename: "/input/target/certs/keycloak.pem"
              private_key:
                filename: "/input/target/certs/keycloak-key.pem"
            validation_context:
              trusted_ca:
                filename: "/input/target/certs/client-ca.pem"
            key_log:
              path: "/tmp/envoy-wireshark-keys.log"
          require_client_certificate: false
