src/test/resources/integration-test/keycloak-realm.json
{
    "realm": "xfcc",
    "enabled": true,
    "clients": [
      {
        "clientId": "xfcc-client",
        "enabled": true,
        "clientAuthenticatorType": "client-x509",
        "redirectUris": ["https://keycloak.127.0.0.1.nip.io:8443/*"],
        "webOrigins": ["*"],
        "publicClient": false,
        "protocol": "openid-connect",
        "serviceAccountsEnabled": true,
        "attributes": {
          "post.logout.redirect.uris": "https://keycloak.127.0.0.1.nip.io:8443/*",
          "x509.allow.regex.pattern.comparison": true,
          "x509.subjectdn": "(.*?)(?:$)"
        }
      }
    ]
  }
